// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateProgressDialog can be without progress, and not cancellable 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Downloading update
            </b>
            <div
              class="tw-pl-4"
            >
              <div
                class="tw-preflight tw-border  spinner-border spinner-border-sm"
              />
            </div>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <p>
            Downloading nRF Connect for Desktop 
            1.2.3
            ...
          </p>
          <p>
            This might take a few minutes. The application will restart and update once the download is complete.
          </p>
        </div>
        <div
          class="modal-footer"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateProgressDialog can have a version, percent downloaded, and be cancellable 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Downloading update
            </b>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <p>
            Downloading nRF Connect for Desktop 
            1.2.3
            ...
          </p>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="42"
              class="progress-bar"
              role="progressbar"
              style="width: 42%;"
            >
              42%
            </div>
          </div>
          <p>
            This might take a few minutes. The application will restart and update once the download is complete.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <div
            class="tw-preflight "
          >
            <button
              class="tw-h-8 tw-px-4 tw-text-sm tw-bg-nordicBlue tw-text-white active:enabled:tw-bg-nordicBlue-700 "
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateProgressDialog has cancelling disabled after being cancelled 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Downloading update
            </b>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <p>
            Downloading nRF Connect for Desktop 
            1.2.3
            ...
          </p>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="progress-bar"
              role="progressbar"
              style="width: 0%;"
            >
              0%
            </div>
          </div>
          <p>
            This might take a few minutes. The application will restart and update once the download is complete.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <div
            class="tw-preflight "
          >
            <button
              class="tw-h-8 tw-px-4 tw-text-sm tw-bg-nordicBlue tw-text-white active:enabled:tw-bg-nordicBlue-700 "
              disabled=""
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateProgressDialog has cancelling disabled when 100 percent complete 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Downloading update
            </b>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <p>
            Downloading nRF Connect for Desktop 
            1.2.3
            ...
          </p>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="100"
              class="progress-bar"
              role="progressbar"
              style="width: 100%;"
            >
              100%
            </div>
          </div>
          <p>
            This might take a few minutes. The application will restart and update once the download is complete.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <div
            class="tw-preflight "
          >
            <button
              class="tw-h-8 tw-px-4 tw-text-sm tw-bg-nordicBlue tw-text-white active:enabled:tw-bg-nordicBlue-700 "
              disabled=""
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateProgressDialog is initially invisible 1`] = `
<body>
  <div />
</body>
`;
